Fixed figure tags missing max-width causing stretching of imgs

--- a/docroot/themes/iucn_who/css/style.css
+++ b/docroot/themes/iucn_who/css/style.css
@@ -8791,6 +8791,7 @@ small,
 figure {
   display: inline-block;
   position: relative;
+  max-width: 100%;
 }
 figure img {
   display: inline-block;
